<resources>
    <string name="app_name">FlashBack</string>
    <string name="front_title">Front</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Edit message</string>
    <string name="open_boiler_button">Open Boiler</string>
    <string name="back_title">Back</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_screen_button">EDIT CARD</string>
    <string name="front_edit">Front Edit</string>
    <string name="add_card">Add New Card</string>
    <string name="card_front_hint">Add Front Text</string>
    <string name="card_back_hint">Add Back Text</string>
    <string name="add_new_card">New Card</string>
    <string name="edit_screen">Edit Card</string>
    <string name="front_text_card_front">Front Text</string>
    <string name="description_edit_on_card">edit button on a particular flashcard</string>
    <string name="description_for_a_card">delete button for a particular card</string>
    <string name="add_button_description">add button</string>
    <string name="upbuttonrecyclerview">upbuttonrecyclerview</string>
    <string name="downbuttonrecyclerview">downbuttonrecyclerview</string>
    <string name="flashcardstitle"><u>Flashcards</u></string>
    <string name="deckstitle"><u>Decks</u></string>
    <string name="sample_deck_name">Subject101</string>
    <string name="deck_item_img_desc">deck item folder icon</string>
    <string name="create_a_deck">Create a Deck</string>
    <string name="deck_name">Deck Name:</string>
    <string name="select_cards">Select Cards</string>
    <string name="edit_deck_name"><u>Edit Deck Name</u></string>
    <string name="select_cards_to_move"><u>Select Cards To Move</u></string>
    <string name="move_to"><u>Move To</u></string>
    <string name="move">Move</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deck">Deck</string>
    <string name="flashcards">Flashcards</string>
    <string name="start_quiz_button">Start Quiz</string>
    <string name="next_button_value">Next</string>
    <string name="previous_button_value">Prev</string>
    <string name="search">search</string>
    <string name="search_all_cards"><u>Search All Cards</u></string>
    <string name="backbutton">backButton</string>
</resources>