<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/deck"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:icon="@drawable/ic_baseline_edit_24"
                android:onClick="editDeckName"
                android:title="@string/edit_button"/>
            <item
                android:icon="@drawable/ic_baseline_delete_forever_24"
                android:onClick="deleteDeck"
                android:title="@string/delete"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_baseline_note_24"
        android:title="@string/flashcards"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:icon="@drawable/ic_baseline_folder_24"
                android:onClick="moveCardsFromDeck"
                android:title="@string/move"/>
            <item
                android:icon="@drawable/ic_baseline_delete_forever_24"
                android:onClick="deleteCardsFromDeck"
                android:title="@string/delete" />
            <item
                android:icon="@drawable/ic_baseline_add_24"
                android:onClick="onAddCardToDeck"
                android:title="@string/add_card"/>
            <item
                android:icon="@drawable/ic_baseline_timer_24"
                android:onClick="openQuiz"
                android:title="Quiz"
                />
        </menu>
    </item>
</menu>