<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_front"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/front_text_card_front"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/editButtonSingleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/description_edit_on_card"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/deleteButtonSingleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/description_for_a_card"
            android:src="@android:drawable/ic_delete" />

    </LinearLayout>


</androidx.cardview.widget.CardView>