<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minHeight="500dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:id="@+id/t_view_cards_mco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/select_cards_to_move"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="0.4"
        android:id="@+id/r_view_cards_mco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    <TextView
        android:id="@+id/t_view_decks_mco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/move_to"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="0.4"
        android:id="@+id/r_view_decks_mco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    <RelativeLayout
        android:id="@+id/r_layout_mco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/deckScreen_move_cards_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:layout_margin="5dp" />
        <Button
            android:id="@+id/deckScreen_move_cards_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/deckScreen_move_cards_button"
            android:layout_toEndOf="@+id/deckScreen_move_cards_button" />
    </RelativeLayout>
</LinearLayout>