<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/front_card_textView"
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/back_card_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715" />

    <TextView
        android:id="@+id/front_title_EditScreen"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/front_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/front_card_textView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/front_card_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editFront"
        android:text="@string/edit_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/front_title_EditScreen"
        app:layout_constraintEnd_toEndOf="@+id/front_card_textView" />

    <TextView
        android:id="@+id/back_card_textView"
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="88dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="67dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back_title"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/back_card_textView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_card_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_button"
        app:layout_constraintBottom_toTopOf="@+id/back_card_textView"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>